<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.titan.tablet.Activitys.LoginActivity">

    <!-- Login progress -->
    <LinearLayout android:id="@+id/login_status"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#1E88E5"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/login_status_message"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_progress_signing_in" />
    </LinearLayout>

    <!-- Login form -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#4472CF"
        >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@drawable/logotitan"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>

        <LinearLayout style="@style/LoginFormContainer"
            android:orientation="vertical">



            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:hint="@string/prompt_email"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Usuário"
                app:met_baseColor="#FFFFFF"
                app:met_primaryColor="#FFFFFF"
                app:met_textColor="#FFFFFF"
                app:met_underlineColor="#FFFFFF"
                app:met_floatingLabelTextColor="#FFFFFF"
                app:met_iconLeft="@drawable/usuario"

                />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:layout_marginTop="10dp"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Senha"
                app:met_baseColor="#FFFFFF"
                app:met_primaryColor="#FFFFFF"
                app:met_textColor="#FFFFFF"
                app:met_underlineColor="#FFFFFF"
                app:met_floatingLabelTextColor="#FFFFFF"
                app:met_iconLeft="@drawable/senha"
                />


            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/sign_in_button"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#ffffff"

                android:text="@string/action_sign_in_register"  />


        </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/txt_conexao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="Conectando..."/>

                    <ProgressBar
                        android:id="@+id/pgb_login"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:max="100"
                        android:minHeight="50dp"
                        android:minWidth="200dp"
                        android:progress="1" />

                    </LinearLayout>


                <LinearLayout
                    android:id="@+id/lay_servidor"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/servidor"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img_status_servidor"
                        android:layout_gravity="center"
                        android:background="@drawable/status_vermelho"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</merge>
